EPIC: Homescreen FEAT: Button functionality -- fix z-index for button plus add href to login and register functions

--- a/app/static/css/homescreen.css
+++ b/app/static/css/homescreen.css
@@ -20,7 +20,7 @@
     transform: translate(-50%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5%;
-    z-index: -1;
+    z-index: 1;
 }
 
 h1 {
